--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-# Create a conda environment with python version 3.9.7
+### Create a conda environment with python version 3.10.4 ###
 numpy==1.22.0
 scipy
 sklearn
 pandas
 pyyaml
-torch==1.10.2
-torchvision
-torchaudio
-cuda-python
 seaborn
 wandb
-numba
 tqdm
+
+### Then run the following command ###
+# conda install pytorch torchvision torchaudio cudatoolkit=11.3 -c pytorch
